<resources>
    <string name="ms_app_name" translatable="false">Mico Saver</string>

    <string name="ms_download">Download</string>
    <string name="ms_videos">Videos</string>
    <string name="ms_favorite">Favorite</string>
    <string name="ms_settings">Settings</string>
    <string name="ms_language">Language</string>
    <string name="ms_how_to_use">How to use?</string>
    <string name="ms_about">About</string>
    <string name="ms_how_to_use_1">How to use</string>
    <string name="ms_how_to_use_1_desc">Download Videos Quickly Without Watermark</string>
    <string name="ms_click_me">Click Me</string>
    <string name="ms_ok">OK</string>
    <string name="ms_step_1">Step - 1</string>
    <string name="ms_step_1_desc">Select The Video You Like And Click The Share Button</string>
    <string name="ms_step_2">Step - 2</string>
    <string name="ms_step_2_desc_1">Click To Copy The Link To Mico Saver Downloader To Download
        The Video</string>
    <string name="ms_step_2_desc_2">Click To Share To Mico Saver Downloader To Download The Video</string>
    <string name="ms_parse_video">Parsing Video…</string>
    <string name="ms_save">Save</string>
    <string name="ms_retry">Retry</string>
    <string name="ms_parse_error_desc">Error, this app only supports video links from Facebook,
        Instagram, X, TikTok, Snapchat and RedNote</string>
    <string name="ms_parse_error_desc1">Error, this app only supports video links from
        Instagram or X</string>
    <string name="ms_view">View</string>
    <string name="ms_play">Play</string>
    <string name="ms_parsing_tip">Please wait, the video is being parsed</string>
    <string name="ms_download_finish">Video download complete!</string>
    <string name="ms_permission_title">Enable Mico Saver Notifications</string>
    <string name="ms_permission_desc">Never Miss A New Video – Turn On Alerts To Stay In The
        Know!</string>
    <string name="ms_allow">Allow</string>
    <string name="ms_ad_loading">Ad Loading</string>
    <string name="ms_downloading">Downloading</string>
    <string name="ms_downloading_empty_tip">No Downloads Yet? Give Our Downloader A Try!</string>
    <string name="ms_downloading_delete_tip_title">Remove downloading video?</string>
    <string name="ms_downloading_delete_tip_desc">Are you sure you want to remove the video you are downloading? It cannot be restored after removal and the video link needs to be parsed again.</string>
    <string name="ms_cancel">Cancel</string>
    <string name="ms_remove">Remove</string>
    <string name="ms_delete_successfully">Delete successfully</string>
    <string name="ms_local_videos">Local Videos</string>
    <string name="ms_share">Share</string>
    <string name="ms_delete">Delete</string>
    <string name="ms_select_videos">Please select videos</string>
    <string name="ms_delete_video">Delete video?</string>
    <string name="ms_delete_video_desc">Are you sure you want to delete all videos? You can\'t
        recover them after deletion. You can copy the video link and re-parse it to download.</string>
    <string name="ms_no_content">No Content~</string>
    <string name="ms_unknown">Unknown</string>

    <string name="ms_msg_desc1927">🔥 Want’s soft flicker, 🔥 tap to fuel!</string>
    <string name="ms_msg_act1927">Fuel</string>
    <string name="ms_msg_desc1928">💋 Whispered heat, 💋 lean to taste!</string>
    <string name="ms_msg_act1928">Taste</string>
    <string name="ms_msg_desc1929">👀 Glimpse of lace, 👀 click to touch!</string>
    <string name="ms_msg_act1929">Touch</string>
    <string name="ms_msg_desc1930">💖 Warmth of closeness, 💖 edge to feel!</string>
    <string name="ms_msg_act1930">Feel</string>
    <string name="ms_msg_desc1931">🔥 Hidden fire, 🔥 peel to uncover!</string>
    <string name="ms_msg_act1931">Uncover</string>
    <string name="ms_msg_desc1932">💃 Sway of charm, 💃 grab to pull!</string>
    <string name="ms_msg_act1932">Pull</string>
    <string name="ms_msg_desc1933">👄 Tempting smirk, 👄 tap to melt!</string>
    <string name="ms_msg_act1933">Melt</string>
    <string name="ms_msg_desc1934">💖 Secret tremor, 💖 stir to ignite!</string>
    <string name="ms_msg_act1934">Ignite</string>
    <string name="ms_msg_desc1935">🔥 Slow burn of need, 🔥 stoke to blaze!</string>
    <string name="ms_msg_act1935">Blaze</string>
    <string name="ms_msg_desc1936">💋 Brush of warmth, 💋 grab to hold!</string>
    <string name="ms_msg_act1936">Hold</string>
    <string name="ms_msg_desc1937">👀 Glimpse of temptation, 👀 chase to claim!</string>
    <string name="ms_msg_act1937">Claim</string>
    <string name="ms_msg_desc1938">💖 Soft spark of crave, 💖 fan to flame!</string>
    <string name="ms_msg_act1938">Flame</string>
    <string name="ms_msg_desc1939">🔥 Warm breath hint, 🔥 lean to catch!</string>
    <string name="ms_msg_act1939">Catch</string>
    <string name="ms_msg_desc1940">💃 Tempting curve, 💃 trace to crave!</string>
    <string name="ms_msg_act1940">Crave</string>
    <string name="ms_msg_desc1941">👄 Whispered need, 👄 click to answer!</string>
    <string name="ms_msg_act1941">Answer</string>
    <string name="ms_msg_desc1942">💖 Hidden spark, 💖 rub to burn!</string>
    <string name="ms_msg_act1942">Burn</string>
    <string name="ms_msg_desc1943">🔥 Slow light tease, 🔥 peel to see!</string>
    <string name="ms_msg_act1943">See</string>
    <string name="ms_msg_desc1944">💋 Faint kiss trace, 💋 reach to take!</string>
    <string name="ms_msg_act1944">Take</string>
    <string name="ms_msg_desc1945">👀 Glow of desire, 👀 tap to deepen!</string>
    <string name="ms_msg_act1945">Deepen</string>
    <string name="ms_msg_desc1946">💖 Warmth of tease, 💖 hold to savor!</string>
    <string name="ms_msg_act1946">Savor</string>
    <string name="ms_msg_desc1947">🔥 Secret flame of need, 🔥 fan to roar!</string>
    <string name="ms_msg_act1947">Roar</string>
    <string name="ms_msg_desc1948">💃 Sway of temptation, 💃 grab to pull!</string>
    <string name="ms_msg_act1948">Pull</string>
    <string name="ms_msg_desc1949">👄 Teasing grin, 👄 tap to melt!</string>
    <string name="ms_msg_act1949">Melt</string>
    <string name="ms_msg_desc1950">💖 Soft shiver of want, 💖 stir to heat!</string>
    <string name="ms_msg_act1950">Heat</string>
    <string name="ms_msg_desc1951">🔥 Slow burn of charm, 🔥 stoke to fire!</string>
    <string name="ms_msg_act1951">Fire</string>
    <string name="ms_msg_desc1952">💋 Whispered crave, 💋 lean to hear!</string>
    <string name="ms_msg_act1952">Hear</string>
    <string name="ms_msg_desc1953">👀 Glint of sin, 👀 click to chase!</string>
    <string name="ms_msg_act1953">Chase</string>
    <string name="ms_msg_desc1954">💖 Warm spark of need, 💖 rub to flame!</string>
    <string name="ms_msg_act1954">Flame</string>
    <string name="ms_msg_desc1955">🔥 Faint breath tease, 🔥 reach to feel!</string>
    <string name="ms_msg_act1955">Feel</string>
    <string name="ms_msg_desc1956">💃 Tempting line, 💃 trace to want!</string>
    <string name="ms_msg_act1956">Want</string>
    <string name="ms_msg_desc1957">👄 Whispered crave, 👄 tap to answer!</string>
    <string name="ms_msg_act1957">Answer</string>
    <string name="ms_msg_desc1958">💖 Hidden heat, 💖 peel to wake!</string>
    <string name="ms_msg_act1958">Wake</string>
    <string name="ms_msg_desc1959">🔥 Slow light hint, 🔥 click to see!</string>
    <string name="ms_msg_act1959">See</string>
    <string name="ms_msg_desc1960">💋 Kiss hint soft, 💋 grab to claim!</string>
    <string name="ms_msg_act1960">Claim</string>
    <string name="ms_msg_desc1961">👀 Desire’s glow, 👀 tap to deepen!</string>
    <string name="ms_msg_act1961">Deepen</string>
    <string name="ms_msg_desc1962">💖 Tease’s warmth, 💖 hold to keep!</string>
    <string name="ms_msg_act1962">Keep</string>
    <string name="ms_msg_desc1963">🔥 Want’s secret flame, 🔥 fan to burn!</string>
    <string name="ms_msg_act1963">Burn</string>
    <string name="ms_msg_desc1964">💃 Temptation’s sway, 💃 pull to close!</string>
    <string name="ms_msg_act1964">Close</string>
    <string name="ms_msg_desc1965">👄 Smirk’s tease, 👄 tap to melt!</string>
    <string name="ms_msg_act1965">Melt</string>
    <string name="ms_msg_desc1966">💖 Need’s soft shiver, 💖 stir to heat!</string>
    <string name="ms_msg_act1966">Heat</string>
    <string name="ms_msg_desc1967">🔥 Allure’s slow burn, 🔥 stoke to roar!</string>
    <string name="ms_msg_act1967">Roar</string>
    <string name="ms_msg_desc1968">💋 Crave’s whisper, 💋 lean to catch!</string>
    <string name="ms_msg_act1968">Catch</string>
    <string name="ms_msg_desc1969">👀 Sin’s glint, 👀 click to chase!</string>
    <string name="ms_msg_act1969">Chase</string>
    <string name="ms_msg_desc1970">💖 Spark of want, 💖 tap to grow!</string>
    <string name="ms_msg_act1970">Grow</string>
    <string name="ms_msg_desc1971">🔥 Tease’s heat, 🔥 peel to take!</string>
    <string name="ms_msg_act1971">Take</string>
    <string name="ms_msg_desc1972">💋 Whispered charm, 💋 lean to keep!</string>
    <string name="ms_msg_act1972">Keep</string>
    <string name="ms_msg_desc1973">👀 Soft skin glow, 👀 click to trace!</string>
    <string name="ms_msg_act1973">Trace</string>
    <string name="ms_msg_desc1974">💖 Warm want’s spark, 💖 rub to roar!</string>
    <string name="ms_msg_act1974">Roar</string>
    <string name="ms_msg_desc1975">🔥 Desire’s flicker, 🔥 tap to blaze!</string>
    <string name="ms_msg_act1975">Blaze</string>
    <string name="ms_msg_desc1976">💋 Tease’s whisper, 💋 lean to crave!</string>
    <string name="ms_msg_act1976">Crave</string>
    <string name="ms_msg_desc1977">👀 Glimpse of heat, 👀 click to feel!</string>
    <string name="ms_msg_act1977">Feel</string>
    <string name="ms_msg_desc1978">💖 Secret warmth, 💖 stir to ignite!</string>
    <string name="ms_msg_act1978">Ignite</string>
    <string name="ms_msg_desc1979">🔥 Slow burn of want, 🔥 stoke to fire!</string>
    <string name="ms_msg_act1979">Fire</string>
</resources>