<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="14dp">
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="317dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:orientation="vertical"
                android:layout_marginTop="140dp"
                android:background="@drawable/ms_ic_how_to_use_item">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ms_step_1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/ms_text_color_132338"
                    android:layout_marginStart="178dp"
                    android:layout_marginTop="36dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ms_step_1_desc"
                    android:layout_marginEnd="12dp"
                    android:textSize="14sp"
                    android:textColor="@color/ms_text_color_132338"
                    android:layout_marginStart="178dp"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="146dp"
                android:layout_height="317dp"
                android:src="@drawable/ms_ic_step_1"
                android:layout_marginStart="17dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="317dp"
            android:layout_marginTop="19dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:orientation="vertical"
                android:layout_marginTop="140dp"
                android:background="@drawable/ms_ic_how_to_use_item">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ms_step_2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/ms_text_color_132338"
                    android:layout_marginStart="178dp"
                    android:layout_marginTop="36dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ms_step_2_desc_1"
                    android:layout_marginEnd="12dp"
                    android:textSize="14sp"
                    android:textColor="@color/ms_text_color_132338"
                    android:layout_marginStart="178dp"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="146dp"
                android:layout_height="317dp"
                android:src="@drawable/ms_ic_step2_1"
                android:layout_marginStart="17dp"/>
        </FrameLayout>
        
    </LinearLayout>

</androidx.core.widget.NestedScrollView>