<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ms_page_color">

    <RelativeLayout
        android:id="@+id/titleLl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="16dp">
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ms_ic_back"
            />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/ms_local_videos"
            android:gravity="center"
            android:layout_centerInParent="true"
            />

        <ImageView
            android:id="@+id/editIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/ms_ic_check_2"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <!--406-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="396dp"
        app:layout_constraintTop_toBottomOf="@+id/titleLl"/>

    <LinearLayout
        android:id="@+id/emptyLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/titleLl">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ms_ic_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#8D8D8D"
            android:textSize="15sp"
            android:text="@string/ms_downloading_empty_tip"
            android:layout_marginHorizontal="54dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/howToUseBtn"
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/ms_how_to_use"
            android:textColor="@color/ms_c_031c30"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/ms_btn_type_2"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/localVideosBottomLl"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/localBottomDeleteLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ms_ic_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/ms_delete"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/localBottomShareLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_marginStart="140dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ms_ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ms_share"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>