<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="32dp"
    >

    <FrameLayout
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:background="@color/ms_text_color_132338"
        >

        <ImageView
            android:id="@+id/dialogCloseIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/ms_ic_dialog_close"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"/>

        <LinearLayout
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/ms_ic_bell"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/ms_permission_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/ms_permission_desc"/>

            <TextView
                android:id="@+id/allowBtn"
                android:layout_width="277dp"
                android:layout_height="44dp"
                android:text="@string/ms_allow"
                android:textSize="18sp"
                android:textColor="#031C30"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:background="@drawable/ms_btn_type_2"/>
            <Space
                android:layout_width="1px"
                android:layout_height="24dp"/>
        </LinearLayout>

    </FrameLayout>



</androidx.cardview.widget.CardView>