<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ms_page_color">

    <RelativeLayout
        android:id="@+id/titleLl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="16dp">
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ms_ic_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/ms_downloading"
            android:gravity="center"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/titleLl"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <LinearLayout
        android:id="@+id/emptyLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/titleLl">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ms_ic_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#8D8D8D"
            android:textSize="15sp"
            android:text="@string/ms_downloading_empty_tip"
            android:layout_marginHorizontal="54dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/howToUseBtn"
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/ms_how_to_use"
            android:textColor="@color/ms_c_031c30"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/ms_btn_type_2"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>